--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              spacing: {
+                13: '3.25rem' ,
+              }
+            }
+          }
+        }
+      </script>
     <title>Belajar TailwindCSS</title>
+    <style type="text/tailwindcss">
+    * {
+        border: 1px solid red;
+    }
+    </style>
 </head>
 <body>
     <h1>mari belajar TailwindCSS</h1>
 
     <section>
         <h2>Spacing</h2>
-        <div>Margin</div>
+        <div class="m-4">Margin</div>
     </section>
 </body>
 </html>
