belajar Spacing ( Padding  + Margin )

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <section>
         <h2>Spacing</h2>
         <div class="m-4">Margin</div>
+        <div class="p-8">Padding</div>
     </section>
 </body>
 </html>
