--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
       </script>
     <title>Belajar TailwindCSS</title>
     <style type="text/tailwindcss">
-    * {
-        border: 1px solid red;
-    }
     </style>
 </head>
 <body>
@@ -27,8 +24,13 @@
 
     <section>
         <h2>Spacing</h2>
-        <div class="m-4">Margin</div>
-        <div class="p-8">Padding</div>
+        <div class="m-13">Margin</div>
+        <div class="py-8">Padding</div>
+    </section>
+
+    <section class="mb-10 w-10">
+        <h2>Sizing</h2>
+        <div class="w-32 h-32">Kotak 1</div>
     </section>
 </body>
 </html>
