--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -10,6 +13,9 @@
             extend: {
               spacing: {
                 13: '3.25rem' ,
+              } ,
+              fontFamilly: {
+                inter: ['Inter']
               }
             }
           }
@@ -31,6 +37,17 @@
     <section class="mb-10 w-10">
         <h2>Sizing</h2>
         <div class="w-32 h-32">Kotak 1</div>
+    </section>
+
+    <section class="mb-96 font-inter max-w-3xl mx-auto">
+    <h2 class="mb-2 text-4xl font-semibold">Belajar Mengenai Typographi pada TailwindCSS</h2>
+    <div class="mb-4 text-lg"> By Dwiky Ramadhan,senin 7 November 2022</div>
+    <p class="mb-4">
+    Lorem ipsum dolor sit, amet consectetur adipisicing <a href="#" class="underline font-semibold">elit</a>. Nisi assumenda adipisci, molestias, itaque pariatur quam sunt neque similique voluptate praesentium optio temporibus unde cumque maxime cum aut soluta! Expedita quidem repudiandae, voluptates quas voluptatibus fugit magni id asperiores saepe repellendus placeat ad nulla facilis sapiente, recusandae eligendi explicabo amet dicta.
+    </p>
+    <blockquote class="mb-4 italic font-thin text-xl">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit distinctio dolor numquam nesciunt quibusdam asperiores, aspernatur atque repudiandae enim porro?"
+    </blockquote>
+    <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum consectetur maxime deleniti asperiores quam molestias incidunt praesentium voluptas facilis quia quos ex doloribus, ea ipsa dolore consequatur quo ratione provident!</p>
     </section>
 </body>
 </html>
