test merubah warna pada text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2 class="mb-2 text-4xl font-semibold">Belajar Mengenai Typographi pada TailwindCSS</h2>
     <div class="mb-4 text-lg"> By Dwiky Ramadhan,senin 7 November 2022</div>
     <p class="mb-4">
-    Lorem ipsum dolor sit, amet consectetur adipisicing <a href="#" class="underline font-semibold">elit</a>. Nisi assumenda adipisci, molestias, itaque pariatur quam sunt neque similique voluptate praesentium optio temporibus unde cumque maxime cum aut soluta! Expedita quidem repudiandae, voluptates quas voluptatibus fugit magni id asperiores saepe repellendus placeat ad nulla facilis sapiente, recusandae eligendi explicabo amet dicta.
+    Lorem ipsum dolor sit, amet consectetur adipisicing <a href="#" class="underline font-semibold text-cyan-500">elit</a>. Nisi assumenda adipisci, molestias, itaque pariatur quam sunt neque similique voluptate praesentium optio temporibus unde cumque maxime cum aut soluta! Expedita quidem repudiandae, voluptates quas voluptatibus fugit magni id asperiores saepe repellendus placeat ad nulla facilis sapiente, recusandae eligendi explicabo amet dicta.
     </p>
     <blockquote class="mb-4 italic font-thin text-xl">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit distinctio dolor numquam nesciunt quibusdam asperiores, aspernatur atque repudiandae enim porro?"
     </blockquote>
