--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
     </style>
 </head>
 <body>
-    <h1>mari belajar TailwindCSS</h1>
+    <h1 class="text-8xl font-bold text-center my-10">Mari belajar <span class="bg-gradient-to-r from-blue-500 to-teal-400 bg-clip-text text-transparent">TailwindCSS</span></h1>
 
-    <section>
-        <h2>Spacing</h2>
+    <section class="mb-10 bg-gradient-to-br from-indigo-300 via-red-400 to-yellow-300">
+        <h2 class="text-3xl text-center">Spacing</h2>
         <div class="m-13">Margin</div>
         <div class="py-8">Padding</div>
     </section>
-
-    <section class="mb-10 w-10">
-        <h2>Sizing</h2>
-        <div class="w-32 h-32">Kotak 1</div>
+        
+        
+        <section class="mb-10 bg-green-400">
+        <h2 class="text-3xl text-center bg-purple-300">Sizing</h2>
+        <div class="w-32 h-32 bg-yellow-200">Kotak 1</div>
     </section>
 
     <section class="mb-96 font-inter max-w-3xl mx-auto">
