basic utility : arbitrary value tailwind

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="w-32 h-32 bg-yellow-200">Kotak 1</div>
     </section>
 
-    <section class="mb-96 font-inter max-w-3xl mx-auto">
+    <section class="font-inter max-w-3xl mx-auto">
     <h2 class="mb-2 text-4xl font-semibold">Belajar Mengenai Typographi pada TailwindCSS</h2>
     <div class="mb-4 text-lg"> By Dwiky Ramadhan,senin 7 November 2022</div>
     <p class="mb-4">
@@ -50,5 +50,9 @@
     </blockquote>
     <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum consectetur maxime deleniti asperiores quam molestias incidunt praesentium voluptas facilis quia quos ex doloribus, ea ipsa dolore consequatur quo ratione provident!</p>
     </section>
-</body>
+    
+    <div class="max-w-xl h-96 bg[#bada55] mx-auto mt-[42px]"></div>
+
+    <div class="mb-96"></div>
+  </body>
 </html>
