--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
+          darkMode: 'class',
           theme: {
             extend: {
               spacing: {
@@ -23,9 +24,12 @@
       </script>
     <title>Belajar TailwindCSS</title>
     <style type="text/tailwindcss">
+      #toggle:checked ~ label div.toggle-circle {
+        @apply translate-x-3;
+      }
     </style>
 </head>
-<body>
+<body class="dark:bg-slate-800 dark:text-slate-200">
     <h1 class="text-8xl font-bold text-center my-10">Mari belajar <span class="bg-gradient-to-r from-blue-500 to-teal-400 bg-clip-text text-transparent">TailwindCSS</span></h1>
 
     <section class="mb-10 bg-gradient-to-br from-indigo-300 via-red-400 to-yellow-300">
@@ -58,6 +62,49 @@
   <div class="mt-32 max-w-xl mx-auto h-96 bg-slate-300 bg-contain bg-no-repeat bg-center rounded-2xl shadow-xl shadow-slate-500 overflow-hidden border-8 flex" style="background-image: url(./img/1.jpg);">
   <div class="w-[200px] h-[200px] bg-white/30 m-auto backdrop-blur-md"></div>
   </div>
+
+<hr class="my-20" />
+
+    <div class="flex justify-center">
+      <span class="text-sm text-slate-500 mr-2">Light</span>
+      <input type="checkbox" id="toggle" class="hidden" />
+      <label for="toggle">
+        <div class="w-9 h-5 bg-slate-500 rounded-full flex items-center p-1">
+          <div class="w-4 h-4 bg-white rounded-full toggle-circle">
+          </div>
+        </div>
+      </label>
+      <span class="text-sm text-slate-500 ml-2">Dark</span>
+    </div>
+
+  <button class="my-10 bg-sky-400 px-5 py-2 rounded-full text-white font-semibold font-inter block  mx-auto hover:bg-sky-600 active:bg-sky-500 focus:ring focus:ring-sky-300 dark:bg-slate-300 dark:text-slate-800 dark:hover:text-slate-900 dark:group-hover:bg-slate-900">Simpan</button>
+
+    <div class="max-w-lg my-10 border border-slate-200 rounded-xl mx-auto p-5 shadow-md font-inter hover:bg-sky-500 group dark:hover:bg-slate-300 ">
+
+      <h5 class="font-bold text-slate-700 text-lg mb-3 group-hover:text-white dark:group-hover:text-slate-800">My Card</h5>
+      <p class="text-slate-600 group-hover:text-white selection:bg-teal-600 first-line:uppercase first-line:tracking-widest first-letter:text-7xl text first-letter:float-left first-letter:mr-3 dark:group-hover:text-slate-800">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure at hic consectetur. Expedita eveniet est veniam, a ea dignissimos quasi doloribus repudiandae molestiae vitae labore vel necessitatibus porro, ipsam incidunt.</p>
+    </div>
+
+  <div class="max-w-lg border border-slate-200 rounded-xl mx-auto shadow-md font-inter p-5">
+    <form action="">
+      <label for="email">
+        <span class="block font-semibold mb-1 text-slate-700 after:content-['*'] after:text-pink-500 after:ml-0.5">Email</span>
+        <input type="email" placeholder="Masukan email" class="px-3 py-2 border shadow rounded w-full block text-sm placeholder:text-slate-400 focus:outline-none focus:ring-1 focus:ring-sky-200 focus:border-sky-200 invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer" />
+        <p class="text-sm m-1 text-pink-700 invisible peer-invalid:visible">Email yang anda masukan tidak valid !</p>
+      </label>
+    </form>
+  </div>
+
     <div class="mb-96"></div>
+    <script>
+      const checkbox = document.querySelector('#toggle');
+      const html = document.querySelector('html');
+
+      checkbox.addEventListener('click', function()
+      {
+        checkbox.checked ? html.classList.add ('dark') : html.classList.remove('dark');
+      })
+    </script>
   </body>
 </html>
