--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -109,6 +109,27 @@
   </div>
 
     <div class="w-40 h-40 bg-pink-500 mx-auto rounded-lg shadow-lg mt-20 animate-spin-slow"></div>
+
+<hr class="my-20 border-t-4" />
+
+  <div class="container px-8 mx-auto">
+    <div class="border rounded-lg shadow-lg p-10 relative">
+      <div class="w-10 h-10 bg-sky-200 rounded-full flex absolute -top-5 left-1/2 -translate-x-1/2 cursor-pointer"><a href="#" class="text-xl m-auto">⬆</a></div>
+      <img src="img/1.jpg" alt="Laptop" width="150" class="float-right mr-3">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. At sit eos ipsum, veniam alias sint officia, eius illum magnam, laudantium commodi rerum blanditiis! Magnam delectus nesciunt quas minus odit vel id, dolores in fugit repellat eveniet rerum explicabo ea expedita similique a aliquam commodi asperiores iste amet magni alias ex!
+      </p>
+    </div>
+  </div>
+
+<div class="container mx-auto border rounded-lg shadow-lg p-10 mt-20 columns-3">
+<img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
+<img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
+<img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
+<img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
+<img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
+<img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
+</div>
 
   <div class="mb-96"></div>
 
