Menambahkan Responsive Design

--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
 <img src="https://source.unsplash.com/600x400" alt="image" class="mb-4" />
 </div>
 
+<hr class="my-24 border-t-4" />
+
+<div class="container px-6 font-inter max-w-md mx-auto sm:max-w-xl md:max-w-5xl">
+  <h3 class="text-4xl font-bold text-slate-800 sm:text-5xl md:text-6xl"><span class="text-sky-500">Dwiky</span> Ramadhan</h3>
+  <img src="img/2.jpg" alt="sky" class="mt-4 rounded-xl shadow-xl sm:mt-6 sm:h-64 sm:w-full sm:object-cover sm:object-center" />
+  <h2 class="mt-6 text-2xl font-semibold text-slate-800 sm:mt-8 sm:text-4xl">Mari Belajar Progamming Bersama Saya</h2>
+  <p class="mt-2 text-slate-600 sm:mt-6 sm:text-xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident accusantium vero nostrum error earum maxime modi voluptatem. Dolor earum fuga architecto fugit maxime porro minus.
+  </p>
+  <div class="mt-4 sm:mt-6">
+    <a href="#" class="inline-block px-5 py-5 bg-red-600 text-white rounded-lg shadow-lg uppercase font-semibold tracking-wider text-sm sm:text-base">Subscribe Channel Youtube</a>
+  </div>
+</div>
+
   <div class="mb-96"></div>
 
     <script>
