--- a/index.html
+++ b/index.html
@@ -143,11 +143,43 @@
   <div class="mt-4 sm:mt-6">
     <a href="#" class="inline-block px-5 py-5 bg-red-600 text-white rounded-lg shadow-lg uppercase font-semibold tracking-wider text-sm sm:text-base">Subscribe Channel Youtube</a>
   </div>
-</div>
+  </div>
     <div class="hidden lg:flex lg:w-1/2">
     <img src="img/2.jpg" alt="sky" class="object-cover mx-auto rounded-l-full" />
     </div>
 </div>
+
+  <h2 class="mt-24 mb-10 text-center font-bold text-slate-700">My Gallery</h2>
+  <div class="container mx-auto px-6 font-inter sm:flex sm:flex-wrap sm:gap-6 sm:justify-evenly">
+    <div class="rounded-md shadow-lg overflow-hidden mb-10 bg-white sm:mb-0 sm:w-64 md:w-80 lg:w-72">
+      <img src="https://source.unsplash.com/600x400" alt="Image Caption" class="w-full">
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, odio!</p>
+      </div>
+    </div>
+    <div class="rounded-md shadow-lg overflow-hidden mb-10 bg-white sm:mb-0 sm:w-64 md:w-80 lg:w-72">
+      <img src="https://source.unsplash.com/600x400" alt="Image Caption" class="w-full">
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, odio!</p>
+      </div>
+    </div>
+    <div class="rounded-md shadow-lg overflow-hidden mb-10 bg-white sm:mb-0 sm:w-64 md:w-80 lg:w-72">
+      <img src="https://source.unsplash.com/600x400" alt="Image Caption" class="w-full">
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, odio!</p>
+      </div>
+    </div>
+    <div class="rounded-md shadow-lg overflow-hidden mb-10 bg-white sm:mb-0 sm:w-64 md:w-80 lg:w-72">
+      <img src="https://source.unsplash.com/600x400" alt="Image Caption" class="w-full">
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
+          <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, odio!</p>
+      </div>
+    </div>
+  </div>
 
   <div class="mb-96"></div>
 
