Grid : fix gambar no.1 tidak tampil

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
     </div>
     <div class="rounded-md shadow-lg overflow-hidden mb-10 bg-white sm:mb-0 sm:w-64 md:w-80 lg:w-72">
-      <img src="https://source.unsplash.com/600x400" alt="Image Caption" class="w-full">  
+      <img src="https://source.unsplash.com/600x400" alt="Image Caption" class="w-full">
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2 text-slate-700">Image Title</div>
           <p class="text-sm text-slate-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, odio!</p>
@@ -186,7 +186,7 @@
     <div class="h-15 text-lg font-bold text-slate-600 md:col-start-2 md:row-start-2 md:flex"><span class="self-end">@dwikyramadhan</span></div>
 
     <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/1.jpg') bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      <div class="w-full h-full bg-[url('/img/grid/1.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
     </div>
     <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition-all duration-500">
       <div class="w-full h-full bg-[url('/img/grid/2.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
@@ -213,7 +213,8 @@
       <div class="w-full h-full bg-[url('/img/grid/9.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
     </div>
     <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/10.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      <div class="w-full h-full bg-[url('/img/grid/10.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500">
+      </div>
     </div>
   </div>
 
