--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         }
       </script>
     <title>Belajar TailwindCSS</title>
-    <!-- <style type="text/tailwindcss">
+    <style type="text/tailwindcss">
       #toggle:checked ~ label div.toggle-circle {
         @apply translate-x-3;
-      } -->
+      }
     </style>
 </head>
 <body class="dark:bg-slate-800 dark:text-slate-200">
