Tailwindcss : switch back to cli & fix some code 2

--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" href="css/style.css" />
+
     <script>
         tailwind.config = {
-          darkMode: 'class',
-          theme: {
-            extend: {
-              spacing: {
-                13: '3.25rem' ,
-              } ,
-              fontFamilly: {
-                inter: ['Inter']
-              },
-              animation: {
-                'spin-slow':  'spin 2s linear infinite',
-              } 
-            }
-          }
+          // darkMode: 'class',
+          // theme: {
+          //   extend: {
+          //     spacing: {
+          //       13: '3.25rem' ,
+          //     } ,
+          //     fontFamilly: {
+          //       inter: ['Inter']
+          //     },
+          //     animation: {
+          //       'spin-slow':  'spin 2s linear infinite',
+          //     } 
+          //   }
+          // }
         }
       </script>
     <title>Belajar TailwindCSS</title>
