Tailwindcss : Menambahkan Functions & Directives

--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
         }
       </script>
     <title>Belajar TailwindCSS</title>
-    <style type="text/tailwindcss">
-      #toggle:checked ~ label div.toggle-circle {
-        @apply translate-x-3;
-      }
-    </style>
 </head>
 <body class="dark:bg-slate-800 dark:text-slate-200">
     <h1 class="text-8xl font-bold text-center my-10">Mari belajar <span class="bg-gradient-to-r from-blue-500 to-teal-400 bg-clip-text text-transparent">TailwindCSS</span></h1>
@@ -187,35 +182,35 @@
     <h2 class="h-15 text-xl font-semibold text-slate-700 md:col-start-4 md:row-start-2 md:flex"><span class="self-center">to my Work</span></h2>
     <div class="h-15 text-lg font-bold text-slate-600 md:col-start-2 md:row-start-2 md:flex"><span class="self-end">@dwikyramadhan</span></div>
 
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+    <div class="group grid-card">
       <div class="w-full h-full bg-[url('/img/grid/1.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition-all duration-500">
+    <div class="group grid-card md:col-start-3">
       <div class="w-full h-full bg-[url('/img/grid/2.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/3.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card">
+      <div class="grid-card-img bg-[url('/img/grid/3.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/4.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card">
+      <div class="grid-card-img bg-[url('/img/grid/4.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/5.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card">
+      <div class="grid-card-img bg-[url('/img/grid/5.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-2 overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/6.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card md:col-start-2">
+      <div class="grid-card-img bg-[url('/img/grid/6.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-4 overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/7.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card md:col-start-4">
+      <div class="grid-card-img bg-[url('/img/grid/7.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/8.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card">
+      <div class="grid-card-img bg-[url('/img/grid/8.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/9.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card md:col-start-3">
+      <div class="grid-card-img bg-[url('/img/grid/9.jpg')]"></div>
     </div>
-    <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition-all duration-500">
-      <div class="w-full h-full bg-[url('/img/grid/10.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+    <div class="group grid-card md:col-start-3">
+      <div class="grid-card-img bg-[url('/img/grid/10.jpg')]"></div>
     </div>
   </div>
 
